--- a/js/package.json
+++ b/js/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electron-quick-start",
+  "name": "Sindsyg-converter",
   "version": "1.0.0",
   "description": "A minimal Electron application",
   "main": "main.js",
@@ -14,7 +14,7 @@
     "tutorial",
     "demo"
   ],
-  "author": "GitHub",
+  "author": "simo94445@github",
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^3.0.7"
